[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/arcade_classic_2/ARCADECLASSIC.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/main.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Level.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 90
extra_spacing_space = 15
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 57
font_data = ExtResource( 1 )

[node name="Main" type="Node2D"]
script = ExtResource( 2 )
pvp_level = ExtResource( 3 )

[node name="MainMenu" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="MainMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Title" type="Label" parent="MainMenu"]
anchor_right = 1.0
margin_left = 293.0
margin_top = 25.0
margin_right = -300.0
margin_bottom = 212.0
custom_fonts/font = SubResource( 1 )
text = "Pong on 
Godot"
align = 1
valign = 1

[node name="pvp" type="Button" parent="MainMenu"]
margin_left = 440.0
margin_top = 272.0
margin_right = 575.0
margin_bottom = 337.0
custom_colors/font_color_hover = Color( 0.937255, 0.945098, 0.0588235, 1 )
custom_fonts/font = SubResource( 2 )
text = "PvP"
flat = true

[node name="pve" type="Button" parent="MainMenu"]
margin_left = 440.0
margin_top = 348.0
margin_right = 575.0
margin_bottom = 413.0
custom_colors/font_color_hover = Color( 0.937255, 0.945098, 0.0588235, 1 )
custom_fonts/font = SubResource( 2 )
disabled = true
text = "PvE"
flat = true

[node name="exit" type="Button" parent="MainMenu"]
margin_left = 858.0
margin_top = 502.0
margin_right = 994.0
margin_bottom = 567.0
custom_colors/font_color_hover = Color( 0.937255, 0.945098, 0.0588235, 1 )
custom_fonts/font = SubResource( 2 )
text = "Exit"
flat = true

[connection signal="pressed" from="MainMenu/pvp" to="." method="_start_pvp_level"]
[connection signal="pressed" from="MainMenu/exit" to="." method="_exit_game"]
